src/test/ui/feature-gate-generators.stderr
error[E0658]: yield syntax is experimental (see issue #43122)
  --> $DIR/feature-gate-generators.rs:12:5
   |
LL |     yield true; //~ ERROR yield syntax is experimental
   |     ^^^^^^^^^^
   |
   = help: add #![feature(generators)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
